--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
           extend: {
             colors: {
               brand: {
-                500: '#FBC02D', // Construction Yellow restricted to CTAs
+                500: '#FBC02D',
                 600: '#D4AF37', 
                 DEFAULT: '#FBC02D'
               },
               dark: {
-                900: '#0A0A0A', // Matte Black
+                900: '#0A0A0A',
                 800: '#141414',
                 700: '#1E1E1E'
               }
@@ -62,7 +62,6 @@
       .font-display { font-family: 'Outfit', sans-serif; }
       .font-serif { font-family: 'Playfair Display', serif; }
       
-      /* Fixed Text Clipping for Italic Headers */
       .heading-fix {
         padding-right: 0.15em;
         margin-right: -0.15em;
@@ -98,19 +97,21 @@
         color: #000;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+      }
+    }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
+    <!-- The following script tag is required for Vercel/Vite to find and mount your React code -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
